html files modified

--- a/authenticate/templates/authenticate/base.html
+++ b/authenticate/templates/authenticate/base.html
@@ -1,6 +1,6 @@
 {% extends 'authenticate/base_layout.html' %}
 {% block content %}
-<h1>This is hopme Page</h1>
+{% comment %} <h1>This is hopme Page</h1> {% endcomment %}
 
 {% for mesaage in messages %}
 <div class="alert alert-{{ messages.tags }} alert-dismissible fade show" role="alert">
@@ -15,7 +15,7 @@
  {% if user.is_authenticated %}
  <h3>Hello {{ fname }}</h3>
  <h4>You Are successfully logged in</h4>
- <button><a href="/logout">Logout</a></button>
+ <button><a href="/signout">Logout</a></button>
 
  {% else %}
  
