--- a/authenticate/templates/authenticate/signup.html
+++ b/authenticate/templates/authenticate/signup.html
@@ -1,5 +1,15 @@
 {% extends 'authenticate/base_layout.html' %}
 {% block content %}
+
+{% for mesaage in messages %}
+<div class="alert alert-{{ messages.tags }} alert-dismissible fade show" role="alert">
+    <strong>Message: </strong> {{ message }}
+    <button type="submit" class="close" data-dissmiss="alert" aria-label="Close">
+    <span aria-hidded="true">&times;</span>
+</button>
+</div>
+{% endfor %}
+
 <h1>SignUp</h1>
     <form action="/signup" method="POST">
         {% csrf_token %}
